Added add_to_cart event

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-LQLEXJ5K42');
+        gtag('config', 'G-LQLEXJ5K42', { debug_mode: true });
+
     </script>
 
 </head>
