--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
                 <div class="item item1">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-01.jpg.webp" alt="" />
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item1">Esprit Ruffle Shirt</a></div>
-                            <div class="price">$16.64</div>
+                            <div class="head"><a href="#item1" class="item-name">Esprit Ruffle Shirt</a></div>
+                            <div class="item-price">$16.64</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -176,12 +176,12 @@
                 <div class="item item2">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-02.jpg.webp" alt="">
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item2">Herschel supply</a></div>
-                            <div class="price">$35.31</div>
+                            <div class="head"><a href="#item2" class="item-name">Herschel supply</a></div>
+                            <div class="item-price">$35.31</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -189,12 +189,12 @@
                 <div class="item item3">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-03.jpg.webp" alt="">
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item3">Only Check Trouser</a></div>
-                            <div class="price">$25.50</div>
+                            <div class="head"><a href="#item3" class="item-name">Only Check Trouser</a></div>
+                            <div class="item-price">$25.50</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -202,12 +202,12 @@
                 <div class="item item4">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-04.jpg.webp" alt="">
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item4">Classic Trench Coat</a></div>
-                            <div class="price">$75.00</div>
+                            <div class="head"><a href="#item4" class="item-name">Classic Trench Coat</a></div>
+                            <div class="item-price">$75.00</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -215,12 +215,12 @@
                 <div class="item item5">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-05.jpg.webp" alt="">
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item5">Front Pocket Jumper</a></div>
-                            <div class="price">$34.75</div>
+                            <div class="head"><a href="#item5" class="item-name">Front Pocket Jumper</a></div>
+                            <div class="item-price">$34.75</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -228,12 +228,12 @@
                 <div class="item item6">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-06.jpg.webp" alt="">
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item6">Vintage Inspired Classic</a></div>
-                            <div class="price">$93.20</div>
+                            <div class="head"><a href="#item6" class="item-name">Vintage Inspired Classic</a></div>
+                            <div class="item-price">$93.20</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -241,12 +241,12 @@
                 <div class="item item7">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-07.jpg.webp" alt="">
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item7">Shirt in Stretch Cotton</a></div>
-                            <div class="price">$52.66</div>
+                            <div class="head"><a href="#item7" class="item-name">Shirt in Stretch Cotton</a></div>
+                            <div class="item-price">$52.66</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -254,12 +254,12 @@
                 <div class="item item8">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-08.jpg.webp" alt="">
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item8">Pieces Metallic Printed</a></div>
-                            <div class="price">$18.96</div>
+                            <div class="head"><a href="#item8" class="item-name">Pieces Metallic Printed</a></div>
+                            <div class="item-price">$18.96</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -267,12 +267,13 @@
                 <div class="item item9">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-09.jpg.webp" alt="">
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item9">Converse All Star Hi Plimsolls</a></div>
-                            <div class="price">$75.00</div>
+                            <div class="head"><a href="#item9" class="item-name">Converse All Star Hi Plimsolls</a>
+                            </div>
+                            <div class="item-price">$75.00</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -280,12 +281,12 @@
                 <div class="item item10">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-10.jpg.webp" alt="">
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item10">Femme T-Shirt In Stripe</a></div>
-                            <div class="price">$25.85</div>
+                            <div class="head"><a href="#item10" class="item-name">Femme T-Shirt In Stripe</a></div>
+                            <div class="item-price">$25.85</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -293,12 +294,12 @@
                 <div class="item item11">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-11.jpg.webp" alt="">
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item11">Herschel supply</a></div>
-                            <div class="price">$63.16</div>
+                            <div class="head"><a href="#item11" class="item-name">Herschel supply</a></div>
+                            <div class="item-price">$63.16</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -306,12 +307,12 @@
                 <div class="item item12">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-12.jpg.webp" alt="">
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item12">Herschel supply</a></div>
-                            <div class="price">$63.15</div>
+                            <div class="head"><a href="#item12" class="item-name">Herschel supply</a></div>
+                            <div class="item-price">$63.15</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -319,12 +320,12 @@
                 <div class="item item13">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-13.jpg.webp" alt="">
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item13">T-Shirt with Sleeve</a></div>
-                            <div class="price">$18.49</div>
+                            <div class="head"><a href="#item13" class="item-name">T-Shirt with Sleeve</a></div>
+                            <div class="item-price">$18.49</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -332,12 +333,12 @@
                 <div class="item item14">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-14.jpg.webp" alt="">
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item14">Pretty Little Thing</a></div>
-                            <div class="price">$54.79</div>
+                            <div class="head"><a href="#item14" class="item-name">Pretty Little Thing</a></div>
+                            <div class="item-price">$54.79</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -345,12 +346,12 @@
                 <div class="item item15">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-15.jpg.webp" alt="">
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item15">Mini Silver Mesh Watch</a></div>
-                            <div class="price">$86.85</div>
+                            <div class="head"><a href="#item15" class="item-name">Mini Silver Mesh Watch</a></div>
+                            <div class="item-price">$86.85</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -358,12 +359,12 @@
                 <div class="item item16">
                     <div class="img">
                         <img src="https://preview.colorlib.com/theme/cozastore/images/product-16.jpg.webp" alt="">
-                        <a href="#item" class="btn">Quick View</a>
+                        <a href="#item" class="add-to-cart-btn">Quick View</a>
                     </div>
                     <div class="text-area">
                         <div class="name-price-section">
-                            <div class="head"><a href="#item16">Square Neck Back</a></div>
-                            <div class="price">$29.64</div>
+                            <div class="head"><a href="#item16" class="item-name">Square Neck Back</a></div>
+                            <div class="item-price">$29.64</div>
                         </div>
                         <input type="checkbox" name="wishlist-icon" class="wishlist-icon">
                     </div>
@@ -449,6 +450,8 @@
     <a href="#" class="back-to-top">
         <i class="fa-solid fa-chevron-up"></i>
     </a>
+
+    <script src="./index.js"></script>
 </body>
 
 </html>
